registry frontend nearly finished

--- a/FrontendService/src/main/resources/static/index.html
+++ b/FrontendService/src/main/resources/static/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw=="
           crossorigin="anonymous"/>
-<!--     <link rel="stylesheet" href="css/main.css"/> -->
-<!--     <link rel="stylesheet" href="css/util.css"/> -->
-<!--     <link rel="stylesheet" href="css/margin.css"> -->
-<!--     <link rel="stylesheet" href="css/bootswatch/flatly/bootstrap.min.css"> -->
-<!-- 		<link rel="stylesheet" href="css/padding.css"> -->
+    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/util.css"/>
+    <link rel="stylesheet" href="css/margin.css">
+    <link rel="stylesheet" href="css/bootswatch/flatly/bootstrap.min.css">
+		<link rel="stylesheet" href="css/padding.css">
 
     <!-- <libraries> -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -39,24 +39,23 @@
 <!--     <script type="application/javascript" src="app/controllers/LoginCtrl.js"></script> -->
 <!--     <script type="application/javascript" src="app/controllers/RegisterCtrl.js"></script> -->
 <!--     <script type="application/javascript" src="app/controllers/LogoutCtrl.js"></script> -->
-<!--     <script type="application/javascript" src="app/controllers/HomeCtrl.js"></script> -->
-<!--     <script type="application/javascript" src="app/controllers/UsersCtrl.js"></script> -->
-<!--     <script type="application/javascript" src="app/controllers/SessionsCtrl.js"></script> -->
-
+    <script type="application/javascript" src="app/controllers/HomeCtrl.js"></script>
+    <script type="application/javascript" src="app/controllers/RegistarCtrl.js"></script>
+    <script type="application/javascript" src="app/controllers/AktivnostiCtrl.js"></script>
+<script type="application/javascript" src="app/controllers/RegistarModalCtrl.js"></script>
+<script type="application/javascript" src="app/controllers/EditDateModalCtrl.js"></script>
 
 
 <!--     <services> -->
 <!--     <script type="application/javascript" src="app/services/Auth.js"></script> -->
 <!--     <script type="application/javascript" src="app/services/ForbiddenResponseInterceptor.js"></script> -->
 <!--     <script type="application/javascript" src="app/services/ContentTypeInterceptor.js"></script> -->
-<!--     <script type="application/javascript" src="app/services/Users.js"></script> -->
-
+    <script type="application/javascript" src="app/services/Registar.js"></script>
+	<script type="application/javascript" src="app/services/Aktivnost.js"></script>
 
 </head>
 <body>
 <ng-include src="'partials/header.html'"></ng-include>
-<h3>Neki heder</h3>
-<p>{{ 2+2 }}</p>
 <div id="Content" class="container">
     <ng-view></ng-view>
 </div>
