activity warrant frontend side implemented

--- a/FrontendService/src/main/resources/static/index.html
+++ b/FrontendService/src/main/resources/static/index.html
@@ -44,6 +44,9 @@
     <script type="application/javascript" src="app/controllers/AktivnostiCtrl.js"></script>
 <script type="application/javascript" src="app/controllers/RegistarModalCtrl.js"></script>
 <script type="application/javascript" src="app/controllers/EditDateModalCtrl.js"></script>
+<script type="application/javascript" src="app/controllers/AktivnostModalCtrl.js"></script>
+<script type="application/javascript" src="app/controllers/ResultsModalCtrl.js"></script>
+<script type="application/javascript" src="app/controllers/VerifyModalCtrl.js"></script>
 
 
 <!--     <services> -->
