user service added

--- a/FrontendService/src/main/resources/static/index.html
+++ b/FrontendService/src/main/resources/static/index.html
@@ -36,17 +36,18 @@
     <script type="application/javascript" src="app/services.js"></script>
 
 <!--     <controllers> -->
-<!--     <script type="application/javascript" src="app/controllers/LoginCtrl.js"></script> -->
-<!--     <script type="application/javascript" src="app/controllers/RegisterCtrl.js"></script> -->
-<!--     <script type="application/javascript" src="app/controllers/LogoutCtrl.js"></script> -->
     <script type="application/javascript" src="app/controllers/HomeCtrl.js"></script>
     <script type="application/javascript" src="app/controllers/RegistarCtrl.js"></script>
     <script type="application/javascript" src="app/controllers/AktivnostiCtrl.js"></script>
-<script type="application/javascript" src="app/controllers/RegistarModalCtrl.js"></script>
-<script type="application/javascript" src="app/controllers/EditDateModalCtrl.js"></script>
-<script type="application/javascript" src="app/controllers/AktivnostModalCtrl.js"></script>
-<script type="application/javascript" src="app/controllers/ResultsModalCtrl.js"></script>
-<script type="application/javascript" src="app/controllers/VerifyModalCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/RegistarModalCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/EditDateModalCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/AktivnostModalCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/ResultsModalCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/VerifyModalCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/UsersCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/UserModalCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/LoginCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/LogoutCtrl.js"></script>
 
 
 <!--     <services> -->
@@ -55,6 +56,7 @@
 <!--     <script type="application/javascript" src="app/services/ContentTypeInterceptor.js"></script> -->
     <script type="application/javascript" src="app/services/Registar.js"></script>
 	<script type="application/javascript" src="app/services/Aktivnost.js"></script>
+	<script type="application/javascript" src="app/services/User.js"></script>
 
 </head>
 <body>
