many registry enabled

--- a/FrontendService/src/main/resources/static/index.html
+++ b/FrontendService/src/main/resources/static/index.html
@@ -48,6 +48,8 @@
 	<script type="application/javascript" src="app/controllers/UserModalCtrl.js"></script>
 	<script type="application/javascript" src="app/controllers/LoginCtrl.js"></script>
 	<script type="application/javascript" src="app/controllers/LogoutCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/RegistriCtrl.js"></script>
+	<script type="application/javascript" src="app/controllers/RegistriModalCtrl.js"></script>
 
 
 <!--     <services> -->
@@ -55,6 +57,7 @@
 <!--     <script type="application/javascript" src="app/services/ForbiddenResponseInterceptor.js"></script> -->
 <!--     <script type="application/javascript" src="app/services/ContentTypeInterceptor.js"></script> -->
     <script type="application/javascript" src="app/services/Registar.js"></script>
+    <script type="application/javascript" src="app/services/Registri.js"></script>
 	<script type="application/javascript" src="app/services/Aktivnost.js"></script>
 	<script type="application/javascript" src="app/services/User.js"></script>
 
